--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "jwt-simple": "^0.5.1",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
     "nodemon": "^1.13.3",
